fixed bug on datepicker component where date scrolled infintely on firefox

--- a/frontend/src/pages/Spends/styles/Spends.css
+++ b/frontend/src/pages/Spends/styles/Spends.css
@@ -15,7 +15,6 @@
 .spends-table tr:hover {
   background-color: var(--pinky);
   color: var(--darkPurple);
-  font-weight: 600;
   cursor: pointer;
 }
 
